<resources>
    <string name="text_header_name">Hai Binarian,</string>
    <string name="text_header_greeting">Mau makan apa hari ini?</string>
    <string name="riceText">Nasi</string>
    <string name="diskonText">Diskon 30%</string>
    <string name="diskonSubText">Pesan food lewat aplikasi dan dapatkan diskonmu</string>
    <string name="drinkText">Minuman</string>
    <string name="snackText">Snack</string>
    <string name="list_menu_keterangan">List Menu Makanan</string>
    <string name="mie_text">Mie</string>
    <string name="for_buy_snack">for buy snack</string>
    <string name="for_look_what_i_have_added_to_cart">for look what i have added to cart</string>
    <string name="for_buy_rice">for buy rice</string>
    <string name="for_buy_drink">for buy drink</string>
    <string name="sort_food_by_name">sort food by name</string>
    <string name="for_buy_noodle">for buy noodle</string>
    <string name="for_see_profile_user">for see profile user</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tambah_keranjang">Add to cart - %1$s</string>
    <string name="title_tab_cart">Cart</string>
    <string name="title_tab_profile">Profile</string>
    <string name="title_tab_home">Home</string>
    <string name="no_data_value">Sorry, there was no food data :(</string>
    <string name="cart_notes_value">Enter notes for this item</string>
    <string name="reduce_food_value">For reduce food</string>
    <string name="add_food_value">For add more food</string>
    <string name="cart_delete_value">For delete item from cart</string>
    <string name="price_total_value">Price Total</string>
    <string name="cart_title_value">Cart</string>
    <string name="location_value">Location</string>
    <string name="order_value">Order</string>
    <string name="empty_cart_value">Sorry, your cart is empty</string>
    <string name="payment_summary_value">Payment Summary</string>
    <string name="total_payment_value">Total Payment</string>
    <string name="qris_choose">QRIS</string>
    <string name="cash_choose">Cash</string>
    <string name="payment_method_value">Payment Method</string>
    <string name="take_away_value">Take Away</string>
    <string name="delivery_value">Delivery</string>
    <string name="shipping_method_value">Shipping Method</string>
    <string name="confirmation_order_title">Confirmation Order</string>
    <string name="quantity_title">Quantity : </string>
    <string name="quantity_value">1</string>
    <string name="notes_title">Notes : </string>
    <string name="notes_value">Lorem Ipsum</string>
    <string name="logout_value">Logout from Account</string>
    <string name="phone_number_hint_value">Enter your phone number</string>
    <string name="email_hint_value">Enter your email</string>
    <string name="email_value">Email</string>
    <string name="phone_number_value">Phone Number</string>
    <string name="password_hint_value">Enter your password</string>
    <string name="password_title_value">Password</string>
    <string name="name_hint_value">Enter your name</string>
    <string name="name_title_value">Name</string>
    <string name="profile_title">Profile</string>
    <string name="forgot_password_hint">Forgot your password?</string>
    <string name="login_title_value">Login</string>
    <string name="register_value">Don\'t have an account? Register</string>
    <string name="login_value">Already have an account? Login</string>
    <string name="login_title">Login to your account</string>
    <string name="register_title">Create your account</string>
    <string name="register_btn_value">Register</string>
    <string name="retype_password_title_value">Retype Password</string>
    <string name="retype_password_hint_value">Enter your password again</string>
</resources>