<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.confirmation.ConfirmationOrderActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@null"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/confirmation_order_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/confirmation_order_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/confirmation_order_title"
        style="@style/MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/confirmation_order_title"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/cart_title_line"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="17dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmation_order_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView7"
        style="@style/MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/shipping_method_value"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/cart_title_line"
        app:layout_constraintTop_toBottomOf="@+id/cart_title_line" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/shippingButtonGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:checkedButton="@id/btnTakeAway"
        app:layout_constraintEnd_toEndOf="@+id/toggleButtonGroup"
        app:layout_constraintStart_toStartOf="@+id/materialTextView7"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView7"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTakeAway"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/take_away_value" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelivery"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delivery_value" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <View
        android:id="@+id/cart_shipping_line"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_marginTop="16dp"
        android:background="#F3F3F3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shippingButtonGroup" />

    <ProgressBar
        android:id="@+id/cartProgressBar"
        android:layout_width="wrap_content"
        android:elevation="2dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/cart_food_item"
        app:layout_constraintBottom_toTopOf="@+id/cart_payment_method_line"
        app:layout_constraintEnd_toEndOf="@+id/cart_payment_method_line"
        app:layout_constraintStart_toStartOf="@+id/cart_payment_method_line"
        app:layout_constraintTop_toBottomOf="@+id/cart_shipping_line" />

    <View
        android:id="@+id/cart_payment_method_line"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="#F3F3F3"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/payment_method_value"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/toggleButtonGroup"
        app:layout_constraintStart_toStartOf="@+id/toggleButtonGroup" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButtonGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:checkedButton="@id/btnCash"
        app:layout_constraintBottom_toTopOf="@+id/cart_payment_line"
        app:layout_constraintEnd_toEndOf="@+id/linearLayoutCompat2"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat2"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCash"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cash_choose" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnQRIS"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/qris_choose" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <View
        android:id="@+id/cart_payment_line"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="17dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/materialTextView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView6"
        style="@style/MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/payment_summary_value"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat2"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat2" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bg_linear"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/orderButton"
        app:layout_constraintEnd_toEndOf="@+id/orderButton"
        app:layout_constraintStart_toStartOf="@+id/orderButton">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/totalPaymentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/total_payment_value" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/totalPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Rp. 100.000" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/orderButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/order_value"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>