<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp">

        <ImageButton
            android:id="@+id/btn_checklist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="3dp"
            android:background="@null"
            android:src="@drawable/baseline_check_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_profile_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_profile_title" />

        <ImageButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@null"
            android:src="@drawable/baseline_cancel_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_profile_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_profile_title" />

        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="@null"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="@+id/tv_profile_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_profile_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_profile_title"
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/profile_title"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="17dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_title" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="164dp"
            android:layout_height="164dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/fotorandika"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nameTitle"
            style="@style/RegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="50dp"
            android:text="@string/name_title_value"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="41dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/nameTitle"
            app:layout_constraintTop_toBottomOf="@+id/nameTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name_hint_value" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emailTitle"
            style="@style/RegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/email_value"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/nameField"
            app:layout_constraintTop_toBottomOf="@+id/nameField" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/passwordField"
            app:layout_constraintStart_toStartOf="@+id/emailTitle"
            app:layout_constraintTop_toBottomOf="@id/emailTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEdit"
                android:layout_width="match_parent"
                android:enabled="false"
                android:layout_height="match_parent"
                android:hint="@string/email_hint_value" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/passwordTitle"
            style="@style/RegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/password_title_value"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/emailField"
            app:layout_constraintTop_toBottomOf="@+id/emailField" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/nameField"
            app:layout_constraintStart_toStartOf="@+id/passwordTitle"
            app:layout_constraintTop_toBottomOf="@+id/passwordTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEdit"
                android:layout_width="match_parent"
                android:enabled="false"
                android:layout_height="match_parent"
                android:hint="@string/password_hint_value"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/phoneNumberTitle"
            style="@style/RegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/phone_number_value"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/passwordField"
            app:layout_constraintTop_toBottomOf="@+id/passwordField" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumberField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/emailField"
            app:layout_constraintStart_toStartOf="@+id/phoneNumberTitle"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumberEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone_number_hint_value" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logoutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_button"
            android:text="@string/logout_value"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/phoneNumberField"
            app:layout_constraintStart_toStartOf="@+id/phoneNumberField"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberField" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>